--- a/Covid/app/src/main/res/layout/activity_confirmar_patron.xml
+++ b/Covid/app/src/main/res/layout/activity_confirmar_patron.xml
@@ -10,9 +10,26 @@
         android:id="@+id/pattern_lock_view"
         android:layout_width="321dp"
         android:layout_height="554dp"
-        tools:ignore="MissingClass,MissingConstraints"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.683"
+        tools:ignore="MissingClass,MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="206dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="60dp"
+        android:text="Ingrese su Patron"
+        android:textAlignment="center"
+        android:textColor="#F1E9E9"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
