--- a/Covid/app/src/main/res/layout/activity_user_login.xml
+++ b/Covid/app/src/main/res/layout/activity_user_login.xml
@@ -56,7 +56,7 @@
         android:layout_marginEnd="13dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="d@gmail.com" />
+        android:text="diorio@gmail.com" />
 
     <EditText
         android:id="@+id/editTextLoginPssw"
@@ -68,6 +68,6 @@
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="1111111111" />
+        android:text="12345678" />
 
 </RelativeLayout>
