--- a/Covid/app/src/main/res/layout/activity_patron_desbloqueo.xml
+++ b/Covid/app/src/main/res/layout/activity_patron_desbloqueo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,17 +11,17 @@
         android:id="@+id/pattern_lock_view"
         android:layout_width="321dp"
         android:layout_height="554dp"
-        tools:ignore="MissingClass,MissingConstraints"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="85dp" />
 
     <Button
         android:id="@+id/btnGuardarPatron"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GuardarPatron"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="641dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        android:text="GuardarPatron" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
