--- a/Covid/app/src/main/res/layout/activity_reservas.xml
+++ b/Covid/app/src/main/res/layout/activity_reservas.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,44 +7,57 @@
     tools:context=".views.ReservasView1">
 
     <TextView
+        android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="97dp"
         android:text="Reservas"
-        android:textSize="50sp"
-        android:id="@+id/titulo"
-        ></TextView>
+        android:textSize="50sp"></TextView>
 
     <TextView
         android:id="@+id/fechaReserva"
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/titulo"
-        app:layout_constraintStart_toStartOf="@+id/titulo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Seleccione la fecha\n de su reserva:"
-        android:textSize="20sp"
-        ></TextView>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="0dp"
+        android:text="Seleccione la fecha de su reserva:"
+        android:textAlignment="center"
+        android:textSize="20sp"></TextView>
 
     <Button
+        android:id="@+id/reservarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Reservar"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/reservarButton"
-        ></Button>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="54dp"
+        android:text="Reservar"></Button>
 
     <CalendarView
-        android:layout_width="245dp"
-        android:layout_height="298dp"
-        app:layout_constraintTop_toBottomOf="@+id/fechaReserva"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="126dp"
         android:id="@+id/calendarReserva"
-        tools:ignore="MissingConstraints"></CalendarView>
+        android:layout_width="297dp"
+        android:layout_height="383dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="162dp"
+        android:layout_marginEnd="49dp"></CalendarView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnShakeList"
+        android:layout_width="88dp"
+        android:layout_height="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="144dp"
+        android:text="Shakes"
+        android:textSize="10sp" />
+
+</RelativeLayout>
