formateo de codigo- modif de listados

--- a/Covid/app/src/main/res/layout/activity_lista_logs_view.xml
+++ b/Covid/app/src/main/res/layout/activity_lista_logs_view.xml
@@ -29,4 +29,15 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/sinLogsTxtView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="69dp"
+        android:textAlignment="center"
+        android:textColor="@color/design_default_color_error" />
 </RelativeLayout>
