--- a/Covid/app/src/main/res/layout/activity_lista_shakes.xml
+++ b/Covid/app/src/main/res/layout/activity_lista_shakes.xml
@@ -9,13 +9,13 @@
 
   <ListView
       android:id="@+id/shakeList"
-      android:layout_width="280dp"
-      android:layout_height="470dp"
+      android:layout_width="282dp"
+      android:layout_height="398dp"
+      android:layout_marginTop="72dp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.496"
       app:layout_constraintStart_toStartOf="parent"
-      tools:ignore="MissingConstraints"
-      tools:layout_editor_absoluteY="163dp" />
+      app:layout_constraintTop_toBottomOf="@+id/sinShakesTxtView"
+      tools:ignore="MissingConstraints" />
 
   <TextView
       android:id="@+id/textView15"
